--- a/packages/core/main.css
+++ b/packages/core/main.css
@@ -9,13 +9,18 @@ html,
 body {
   font: Helvetica, sans-serif;
   width: 100%;
-  min-height: 100%; }
+  min-height: 100%;
+  padding: 1% 5% 0; }
 
-.wrapper {
-  padding: 2% 5% 0; }
+.form-wrapper {
+  display: flex;
+  align-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center; }
 
 .header {
-  height: 10%;
+  height: 80px;
   margin-bottom: 5%;
   border: 1px dashed #000;
   background-color: #eff6fd;
@@ -27,24 +32,28 @@ body {
     font-size: 24px; }
 
 .input {
+  width: 300px;
+  height: 30px;
   margin-bottom: 2%;
   border: 1px solid black;
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: space-around; }
+  outline: none; }
+  .input_big {
+    width: 500px;
+    height: 50px; }
 
 button {
+  display: inline-block;
   width: 100px;
   height: 30px;
-  margin-right: 30px;
-  background-color: #fff;
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: space-around; }
+  margin: 0 30px 15px;
+  cursor: pointer;
+  border: 1px solid black;
+  outline: none;
+  background-color: #eff6fd; }
   button_small {
     width: 30px;
     height: 10px; }
+  button:hover {
+    opacity: .8; }
 
 /*# sourceMappingURL=main.css.map */
