--- a/packages/core/main.scss
+++ b/packages/core/main.scss
@@ -24,7 +24,7 @@ body
 
     width: 100%;
     min-height: 100%;
-    padding: 1% 5% 0;
+    padding: 1% 5%;
 }
 
 .form-wrapper
@@ -56,19 +56,22 @@ body
     width: 300px;
     height: 30px;
     margin-bottom: 2%;
+    padding: 10px;
+
     border: 1px solid black;
     outline: none;
-    &_big {
+    &_width-500
+    {
         width: 500px;
         height: 50px;
     }
 }
 
-button
+.button
 {
     display: inline-block;
 
-    width: 100px;
+    width: 120px;
     height: 30px;
     margin: 0 30px 15px;
 
@@ -77,13 +80,12 @@ button
     border: 1px solid black;
     outline: none;
     background-color: $primary-color;
-    &_small
+    &_width-500
     {
-        width: 30px;
-        height: 10px;
+        width: 300px;
     }
     &:hover
     {
-        opacity: .8;
+        opacity: .7;
     }
 }
