--- a/packages/core/main.scss
+++ b/packages/core/main.scss
@@ -101,5 +101,12 @@ body
 
   &__item {
     margin-bottom: 5px;
+    list-style: none;
   }
+
+  &__item:hover {
+    opacity: .7;
+    text-decoration: underline;
+  }
+
 }
