--- a/packages/core/main.scss
+++ b/packages/core/main.scss
@@ -1,6 +1,7 @@
-$font-style: Helvetica, sans-serif;
+$font-family: 'PT Sans', sans-serif;;
 $font-size: 16px;
 $primary-color: #eff6fd;
+$color: #1abc9c;
 @mixin center-position ($direction, $content)
 {
     display: flex;
@@ -21,92 +22,321 @@ $primary-color: #eff6fd;
 html,
 body
 {
+    font-family: $font-family;
     font-size: $font-size;
-    font-style: $font-style;
 
     width: 100%;
     min-height: 100%;
-    padding: 1% 5%;
+
+    background-color: #eee;
 }
 
-.form-wrapper
+.main-wrapper
 {
-    justify-content: center;
+    padding: 30px 30px;
 
-    @include center-position(column, space-between);
+    background-color: white;
+    box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
 
+    &_small
+    {
+        padding: 50px;
+    }
+}
+
+.main-title
+{
+    font-size: $font-size * 2;
+    font-weight: normal;
+
+    &_small
+    {
+        font-size: $font-size * 1.5;
+    }
+}
+
+.logo
+{
+    width: 50px;
+    height: 50px;
 }
 
 .header
 {
+    width: 100%;
     height: 80px;
-    margin-bottom: 5%;
+    margin-bottom: 80px;
 
-    border: 1px dashed #000;
-    background-color: $primary-color;
+    background-color: white;
 
     @include center-position(row, space-around);
     &__title
     {
         font-size: $font-size * 2;
-      flex-basis: 70%;
+
+        flex-basis: 70%;
     }
+}
+
+.link
+{
+    text-decoration: none;
+
+    color: #000;
+
+    &:hover
+    {
+        text-decoration: underline;
+
+        color: $color;
+    }
+}
+
+.poll-wrapper
+{
+    box-shadow: darkgray;
+
+    @include center-position(row, space-around);
 }
 
 .input
 {
+    font-size: 16px;
+
+    display: block;
+
     width: 300px;
-    height: 30px;
-    margin-bottom: 2%;
+    height: 40px;
+    margin: 20px 0;
     padding: 10px;
 
-    border: 1px solid black;
-    outline: none;
+    border: none;
+    border-bottom: solid 1px black;
+
+    &:focus
+    {
+        border-bottom: solid 1px $color;
+        outline: none;
+        box-shadow: none;
+        &::-webkit-input-placeholder
+        {
+            color: gray;
+        }
+    }
+
     &_width-500
     {
         width: 500px;
         height: 50px;
+
+        border: 2px solid darkgray;
+        border-radius: 10px;
+    }
+    &_width-500:focus
+    {
+        border: 2px solid $color;
     }
 }
 
 .button
 {
+    font-weight: 500;
+
     display: inline-block;
 
-    width: 120px;
+    width: 150px;
     height: 30px;
-    margin: 0 30px 15px;
+    margin-right: 20px;
 
     cursor: pointer;
+    -webkit-transition: all .3s ease-in-out;
+       -moz-transition: all .3s ease-in-out;
+            transition: all .3s ease-in-out;
 
-    border: 1px solid black;
+    color: #fff;
+    border: 1px solid transparent;
+    -webkit-border-radius: 3px;
+            border-radius: 3px;
     outline: none;
-    background-color: $primary-color;
-    &_width-500
-    {
-        width: 300px;
-    }
+    background-color: $color;
+
     &:hover
     {
+        color: $color;
+        border-color: $color;
+        background-color: #fff;
+    }
+
+}
+
+.poll-list
+{
+    margin-top: 20px;
+}
+
+.poll-subtitle
+{
+    margin-top: 20px;
+}
+
+.polls
+{
+    &__header
+    {
+        font-size: $font-size * 1.5;
+
+        margin-bottom: 15px;
+    }
+
+    &__item
+    {
+        margin-bottom: 5px;
+
+        list-style: none;
+    }
+
+    &__item:hover
+    {
+        text-decoration: underline;
+
         opacity: .7;
     }
 }
 
-.polls {
-  &__header
-  {
-    font-size: $font-size * 1.5;
+.option-wrapper
+{
     margin-bottom: 15px;
-  }
+}
 
-  &__item {
-    margin-bottom: 5px;
-    list-style: none;
-  }
+input[type='radio']
+{
+    &.radio
+    {
+        position: absolute;
 
-  &__item:hover {
-    opacity: .7;
+        cursor: pointer;
+
+        opacity: 0;
+    }
+     + .option-label
+    {
+        cursor: pointer;
+        &:before
+        {
+            display: inline-block;
+
+            width: 16px;
+            height: 16px;
+            margin-right: 16px;
+
+            content: '';
+            cursor: pointer;
+            text-align: center;
+            vertical-align: top;
+
+            border: 1px solid #ccc;
+            border-radius: 100%;
+            background: #fff;
+        }
+    }
+    &:checked
+    {
+         + .option-label
+        {
+            &:before
+            {
+                -webkit-transition: .5s;
+                   -moz-transition: .5s;
+                     -o-transition: .5s;
+                        transition: .5s;
+
+                background-color: $color;
+                box-shadow: inset 0 0 0 4px #fff;
+            }
+        }
+    }
+
+    &:hover
+    {
+         + .option-label
+        {
+            &:before
+            {
+                border: 1px solid $color;
+            }
+        }
+    }
+
+    &:focus
+    {
+         + .option-label
+        {
+            &:before
+            {
+                border-color: $color;
+                outline: none;
+            }
+        }
+    }
+}
+
+.share-wrapper
+{
+    margin-top: 20px;
+    padding: 25px 30px;
+
+    background-color: white;
+    box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+}
+
+.url-block
+{
+    margin-top: 20px;
+    padding: 10px;
+
+    border: 1px solid darkgray;
+    background-color: #eee;
+    box-shadow: inset 0 0 0 1px rgba(221, 221, 221, 1);
+}
+
+.url-link
+{
+    text-decoration: none;
+
+    color: #000;
+}
+
+.url-link:hover
+{
     text-decoration: underline;
-  }
+}
 
+.share-button-wrapper
+{
+    padding: 25px 0;
+
+    @include center-position(row, space-around);
+}
+
+.share-button
+{
+    display: inline-block;
+
+    margin-right: 30px;
+
+    cursor: pointer;
+    &:hover
+    {
+        opacity: .7;
+    }
+    &:last-child
+    {
+        margin-right: 0;
+    }
+}
+
+.vote-text
+{
+    color: $color;
+  margin-top: 10px;
 }
