--- a/packages/core/main.scss
+++ b/packages/core/main.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=PT+Sans");
+@import url('https://fonts.googleapis.com/css?family=PT+Sans');
 
 $font-family: 'PT Sans', sans-serif;;
 $font-size: 16px;
@@ -145,13 +145,14 @@ body
         border: 2px solid $color;
     }
 
-  &_red {
-    border: 2px solid red;
-  }
-  &_red::-webkit-input-placeholder
-  {
-    color: red;
-  }
+    &_red
+    {
+        border: 2px solid red;
+    }
+    &_red::-webkit-input-placeholder
+    {
+        color: red;
+    }
 }
 
 .button
@@ -183,13 +184,14 @@ body
         background-color: #fff;
     }
 
-  &__delete {
-    width: 20px;
-    height: 20px;
-    background: url("../components/img/delete.svg") no-repeat center;
-    border: none;
-  }
+    &__delete
+    {
+        width: 20px;
+        height: 20px;
 
+        border: none;
+        background: url('../components/img/delete.svg') no-repeat center;
+    }
 }
 
 .poll-list
@@ -384,6 +386,8 @@ input[type='radio']
 {
     font-size: $font-size * 1.2;
     font-weight: 700;
-  display: inline-block;
-  margin-right: 20px;
+
+    display: inline-block;
+
+    margin-right: 20px;
 }
