--- a/packages/core/main.css
+++ b/packages/core/main.css
@@ -17,6 +17,9 @@ body {
 
 .main-wrapper {
   padding: 30px 30px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  border-radius: 20px;
   background-color: white;
   box-shadow: 0 0 10px 5px #dddddd; }
   .main-wrapper_small {
@@ -167,6 +170,9 @@ input[type='radio']:focus + .option-label:before {
 .share-wrapper {
   margin-top: 20px;
   padding: 25px 30px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  border-radius: 20px;
   background-color: white;
   box-shadow: 0 0 10px 5px #dddddd; }
 
@@ -185,14 +191,11 @@ input[type='radio']:focus + .option-label:before {
   text-decoration: underline; }
 
 .share-button-wrapper {
-  padding: 25px 0;
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: space-around; }
+  padding: 25px 0; }
 
 .share-button {
   display: inline-block;
+  padding-right: 20px;
   margin-right: 30px;
   cursor: pointer; }
   .share-button:hover {
