--- a/packages/core/main.scss
+++ b/packages/core/main.scss
@@ -38,6 +38,9 @@ body
 {
     padding: 30px 30px;
 
+    -webkit-border-radius: 20px;
+       -moz-border-radius: 20px;
+            border-radius: 20px;
     background-color: white;
     box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
 
@@ -300,7 +303,6 @@ input[type='radio']
             {
                 border-color: $color;
                 outline: none;
-
             }
         }
     }
@@ -311,6 +313,9 @@ input[type='radio']
     margin-top: 20px;
     padding: 25px 30px;
 
+    -webkit-border-radius: 20px;
+       -moz-border-radius: 20px;
+            border-radius: 20px;
     background-color: white;
     box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
 }
@@ -341,13 +346,13 @@ input[type='radio']
 {
     padding: 25px 0;
 
-    @include center-position(row, space-around);
+    // @include center-position(row, space-around);
 }
 
 .share-button
 {
     display: inline-block;
-
+    padding-right: 20px;
     margin-right: 30px;
 
     cursor: pointer;
