--- a/packages/core/main.css
+++ b/packages/core/main.css
@@ -195,9 +195,10 @@ input[type='radio']:focus + .option-label:before {
 
 .share-button {
   display: inline-block;
-  padding-right: 20px;
   margin-right: 30px;
-  cursor: pointer; }
+  padding-right: 20px;
+  cursor: pointer;
+  outline: none; }
   .share-button:hover {
     opacity: .7; }
   .share-button:last-child {
